tests/agl/rejections/type/ctor_positional_expr.agl
record R
  *
  x: int
let x = 1
let r = R(x + 1)
print r.x
